[package]
name = "rsa_rust"
version = "0.1.0"
authors = ["Carrick <xck7k7@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
sha2 = "0.10.2"
rsa = "0.6.1"
der = "0.5.0"
base64 = "0.13.0"

rand = "0.8.4"
js-sys = "0.3.58"
serde-wasm-bindgen = "0.4.3"
getrandom = { version = "0.2.7", features = ["js"] }

#[dependencies.web-sys]
#version = "0.3"
#features = ["console"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3
